# nofx-cats-py

./: .env.example  LICENSE  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: app.example.yaml  risk.example.yaml  symbols.example.yaml  symbols.yaml
docs/: ARCHITECTURE.md  CHECKLIST_BY_STAGE.md  DATA_CONTRACTS.md  DEVELOPMENT_GUIDE.md  FILE_ORGANIZATION.md  LIVE_MICRO_ISSUE_BACKLOG.md  LIVE_MICRO_MODULE_PLAN.md  OPTIMIZATION_RECOMMENDATIONS.md  REFERENCES.md  RISK_CONSTITUTION.md  V2_UPGRADE_NOTES.md
docs/troubleshooting/: DIAGNOSIS_REPORT.md  README.md
scripts/: paper_runtime.sh
scripts/diagnostics/: check_ai_scores.py  diagnose_no_trades.py
src/cats_py/app/: bootstrap.py
src/cats_py/apps/: run_decision_engine.py  run_execution_daemon.py  run_nofx_collector.py  run_paper_export.py  run_websocket_gateways.py
src/cats_py/config/: settings.py
src/cats_py/domain/: enums.py  models.py
src/cats_py/execution/: guardian.py  order_router.py  protection.py  service.py  validator.py
src/cats_py/features/: engine.py
src/cats_py/infra/: cache.py  event_bus.py  logging.py  storage.py
src/cats_py/journal/: recorder.py
tests/: test_account_state.py  test_decision_engine.py  test_decision_runtime.py  test_execution_service.py  test_guardian.py  test_logging.py  test_mainstream_defaults.py  test_nofx_normalization.py  test_order_router.py  test_paper_dataset.py  test_paper_execution.py  test_protection.py  test_reconciliation.py  test_recovery.py  test_risk_kernel.py  test_runtime_mode.py  test_user_state.py
(+25 files in other folders)
