[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nofx-cats-py"
version = "0.2.0"
description = "NOFX + Binance futures constitutional autonomous trading system scaffold (v2 live_micro-prep)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenAI" }]
dependencies = [
    "httpx>=0.28,<1.0",
    "websockets>=13,<15",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "PyYAML>=6.0,<7",
    "redis>=5,<6",
    "clickhouse-connect>=0.8,<1",
    "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
namespace_packages = true
mypy_path = "src"
